[gd_scene load_steps=9 format=3 uid="uid://bpw6urgdij01f"]

[ext_resource type="Script" path="res://scripts/menus/win_menu.gd" id="1_5b8ax"]
[ext_resource type="FontFile" uid="uid://bos2geotawcoj" path="res://assets/tools/fonts/PixelOperator8.ttf" id="1_ab6rm"]
[ext_resource type="Texture2D" uid="uid://cx3oyc8ekd3s1" path="res://assets/testlevel/star_filled.png" id="3_4lvc3"]

[sub_resource type="Gradient" id="Gradient_rovui"]
interpolation_mode = 2
colors = PackedColorArray(0.289074, 0.383136, 0.856045, 1, 0.460825, 0.895118, 0.985488, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wateh"]
gradient = SubResource("Gradient_rovui")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4walh"]
bg_color = Color(0.7, 0.439717, 0.021, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.7, 0.5089, 0.154, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vn37t"]
bg_color = Color(0.6, 0.372549, 0.0156863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asoxx"]
bg_color = Color(0.88, 0.654133, 0.264, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.742127, 0.467024, 0.0233432, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="win_menu" type="CanvasLayer"]
script = ExtResource("1_5b8ax")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_wateh")

[node name="window" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.678431, 0.815686, 0.92549, 0)

[node name="win_label" type="Label" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -244.0
offset_right = 204.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ab6rm")
theme_override_font_sizes/font_size = 64
text = "YOU WIN!"

[node name="complete_label" type="Label" parent="window/win_label"]
layout_mode = 0
offset_left = -181.0
offset_top = 122.0
offset_right = 215.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("1_ab6rm")
theme_override_font_sizes/font_size = 32
text = "Completed Level"

[node name="star_1" type="Sprite2D" parent="window/win_label/complete_label"]
position = Vector2(714, 10)
scale = Vector2(8, 8)
texture = ExtResource("3_4lvc3")

[node name="damage_label" type="Label" parent="window/win_label"]
layout_mode = 0
offset_left = -181.0
offset_top = 232.0
offset_right = 67.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("1_ab6rm")
theme_override_font_sizes/font_size = 32
text = "No Damage"

[node name="star_2" type="Sprite2D" parent="window/win_label/damage_label"]
position = Vector2(714, 10)
scale = Vector2(8, 8)
texture = ExtResource("3_4lvc3")

[node name="time_label" type="Label" parent="window/win_label"]
layout_mode = 0
offset_left = -181.0
offset_top = 340.0
offset_right = 215.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("1_ab6rm")
theme_override_font_sizes/font_size = 32
text = "Completed Level"

[node name="star_3" type="Sprite2D" parent="window/win_label/time_label"]
position = Vector2(714, 10)
scale = Vector2(8, 8)
texture = ExtResource("3_4lvc3")

[node name="return_button" type="Button" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = 199.0
offset_right = 451.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ab6rm")
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_4walh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vn37t")
theme_override_styles/normal = SubResource("StyleBoxFlat_asoxx")
text = " Return to Level Select "

[connection signal="pressed" from="window/return_button" to="." method="_on_return_button_pressed"]
